fdo#72125 - Expert config dialog takes too much time to come up (edit)

This is not a full fix, this just trims some of the fat in
CuiAboutConfigTabPage::FillItems.
Specifically
  - improve string handling
  - don't use catch/throw unnecessarily

Change-Id: I5b4987407bd007fbbb18f76fcf26f4a33282c0c0